# 3ct-tools

./: .gitignore  README.md  environment.yaml  pyproject.toml
inputs/: beam_hardening_corrections.yaml  bhc_3angle_tomo.yaml  dead_pixel.yaml  dead_pixel_multisource.yaml  scatter.yaml
notebooks/: beam_hardening.ipynb  check_rolling_mean.ipynb  check_tiffs.ipynb
src/tri_ct_tools/: animator.py  colors.py
src/tri_ct_tools/convert/: geometry.py  holdup.py
src/tri_ct_tools/image/: checker.py  reader.py  writer.py
src/tri_ct_tools/inspect/: beam_hardening.py
src/tri_ct_tools/preprocess/: beam_hardening.ipynb  beam_hardening.py  dead_pixel_lines.yaml  dead_pixels.py  optimize_geometry.py  scatter.py
